# icd-10-injury-embeddings

./: .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  devenv.nix  pyproject.toml
R/: data.R  get_injury_embedding.R  icd_10_cm_to_international.R  zzz.R
data/: icd_10_international_codes.csv  icd_10_international_codes.rda  supported_icd_10_codes.rda
man/: get_injury_embedding.Rd  icd_10_cm_to_international.Rd  icd_10_international_codes.Rd  supported_icd_10_codes.Rd
python/icd_10_injury_embeddings/: __init__.py  icd_10_cm_to_international.py  model.py
python/icd_10_injury_embeddings/data/: supported_icd_10_codes.csv
python/training_code/: data.py  embedders.py  lib.py  ntdb.py  to_r.py  utils.py
tests/: test_get_injury_embedding.py  test_icd_10_cm_to_international.py  testthat.R
tests/testthat/: test-get_injury_embedding.R  test-icd_10_cm_to_international.R
