[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
"icd_10_injury_embeddings" = ["data/*.pt", "data/*.csv"]

[project]
name = "icd-10-injury-embeddings"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "polars>=1.35.2",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = "test_*.py"
pythonpath = [
    "python"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
unfixable = ["F401"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
docstring-code-format = true

